--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta charset="utf-8">
 </head>
 <style type="text/css">
+	body {
+		background-color: green;
+		color: white;
+		}
 	h1 {
 		position: absolute;
 		top: 40%;
@@ -17,7 +21,7 @@
 </style>
 
 <body>
-	<h1>HellOoooOooo</h1>
+	<h1>Bonjour</h1>
 
 </body>
 </html>
